# makefile-lossless

./: Cargo.toml  Makefile  README.md  TODO  TODO.md  disperse.conf
.github/workflows/: publish.yml
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/parse/: example_archive.mk
fuzz/corpus/roundtrip/: example_basic.mk  example_conditional.mk
fuzz/fuzz_targets/: incremental_edit.rs  parse.rs  roundtrip.rs
src/: incremental.rs  lex.rs  lib.rs  lossless.rs  parse.rs  pattern.rs  text.rs
src/ast/: archive.rs  conditional.rs  include.rs  makefile.rs  mod.rs  rule.rs  variable.rs  vpath.rs
