[package]
name = "makefile-lossless"
repository = "https://github.com/jelmer/makefile-lossless"
description = "Lossless Parser for Makefiles"
version = "0.3.29"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>",]
documentation = "https://docs.rs/makefile-lossless"
homepage = "https://github.com/jelmer/makefile-lossless"

[dependencies]
log = "0.4"
rowan = "^0.16"

[dev-dependencies]
maplit = "1.0.2"
